# varlong

./: Cargo.toml  LICENSE  README.md
kmer/: all.fa
src/: args.rs  hash.rs  kmerionise.rs  main.rs  minimap.rs  ontstruct.rs  predict.rs  remove.rs
